# OOP-project

./: .gitignore  AirlinesDB.session.sql  HDSD.md  README.md  TestReport.md  note.md
source/: CMakeLists.txt  Dockerfile  Doxyfile  docker-compose.yml  schema.sql
source/docs/html/: _aircraft_8h.html  _aircraft_8h.js  _aircraft_8h_source.html  _aircraft_mock_repository_8h_source.html  _aircraft_repository_8h.html  _aircraft_repository_8h.js  _aircraft_repository_8h_source.html  _aircraft_serial_8h.html  _aircraft_serial_8h.js  _aircraft_serial_8h_source.html  _aircraft_serial_validator_8h.html  _aircraft_serial_validator_8h.js  _aircraft_serial_validator_8h_source.html  _aircraft_service_8h.html  _aircraft_service_8h.js  _aircraft_service_8h_source.html  _aircraft_u_i_8h_source.html  _base_value_object_test_8h_source.html  _contact_info_8h.html  _contact_info_8h.js  _contact_info_8h_source.html  _contact_info_formatter_8h.html  _contact_info_formatter_8h.js  _contact_info_formatter_8h_source.html  _contact_info_parser_8h.html  _contact_info_parser_8h.js  _contact_info_parser_8h_source.html  _contact_info_validator_8h.html  _contact_info_validator_8h.js  _contact_info_validator_8h_source.html  _currency_registry_8h.html  _currency_registry_8h.js  _currency_registry_8h_source.html  _flight_8h.html  _flight_8h_source.html  _flight_mock_repository_8h_source.html  _flight_number_8h.html  _flight_number_8h.js  _flight_number_8h_source.html  _flight_number_validator_8h.html  (+593 more)
source/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  enumvalues_0.js  (+50 more)
source/src/: CMakeLists.txt  main.cpp
source/src/core/: Flight.cpp  Flight.h  Passenger.cpp  Passenger.h  Reservation.cpp  Reservation.h
source/src/core/entities/: Aircraft.h  Entity.h  Flight.h  IEntity.h  Passenger.h  Ticket.h
source/src/core/exceptions/: Result.h  ValidationResult.h
source/src/core/value_objects/aircraft_serial/: AircraftSerial.h  AircraftSerialValidator.h
source/src/core/value_objects/contact_info/: ContactInfo.h  ContactInfoFormatter.h  ContactInfoParser.h  ContactInfoValidator.h
source/src/core/value_objects/flight_number/: FlightNumber.h  FlightNumberValidator.h
source/src/core/value_objects/flight_status/: FlightStatus.cpp  FlightStatus.h
source/src/core/value_objects/passport_number/: PassportNumber.h  PassportNumber.inl  PassportNumberError.h  PassportNumberFormatter.h  PassportNumberParser.h  PassportNumberRegistry.h  PassportNumberValidator.h
source/src/core/value_objects/price/: CurrencyRegistry.h  Price.h  PriceError.h  PriceFormatter.h  PriceParser.h  PriceValidator.h
source/src/core/value_objects/route/: Route.h  RouteError.h  RouteFormatter.h  RouteParser.h  RouteValidator.h
source/src/core/value_objects/schedule/: Schedule.h  ScheduleError.h  ScheduleFormatter.h  ScheduleParser.h  ScheduleValidator.h
source/src/core/value_objects/seat_class_map/: SeatClass.h  SeatClassMap.h  SeatClassMapFormatter.h  SeatClassMapParser.h  SeatClassMapValidator.h
source/src/core/value_objects/seat_number/: SeatNumber.h  SeatNumberError.h  SeatNumberValidator.h
source/src/core/value_objects/ticket_number/: TicketNumber.h  TicketNumberError.h  TicketNumberValidator.h
source/src/core/value_objects/ticket_status/: TicketStatus.h
source/src/database/: DatabaseConnection.h  InterfaceDatabaseConnection.h  MySQLConnection.cpp  MySQLConnection.h  MySQLXConnection.cpp  MySQLXConnection.h
source/src/repositories/: FlightRepository.cpp  FlightRepository.h  InterfaceRepository.h  PassengerRepository.cpp  PassengerRepository.h  RepositoryInterface.h  ReservationRepository.cpp  ReservationRepository.h
source/src/repositories/MockRepository/: AircraftMockRepository.cpp  AircraftMockRepository.h  FlightMockRepository.cpp  FlightMockRepository.h  PassengerMockRepository.cpp  PassengerMockRepository.h  TicketMockRepository.cpp  TicketMockRepository.h
source/src/repositories/MySQLRepository/: AircraftRepository.cpp  AircraftRepository.h  FlightRepository.cpp  FlightRepository.h  PassengerRepository.cpp  PassengerRepository.h  TicketRepository.cpp  TicketRepository.h
source/src/services/: AircraftService.cpp  AircraftService.h  FlightService.cpp  FlightService.h  InterfaceService.h  PassengerService.cpp  PassengerService.h  ReservationService.cpp  ReservationService.h  ServiceFactory.cpp  ServiceFactory.h  ServiceInterface.h  TicketService.cpp  TicketService.h
source/src/tests/core/entities/: AircraftTest.cpp  FlightTest.cpp  PassengerTest.cpp  TicketTest.cpp
source/src/tests/core/value_objects/: AircraftSerialTest.cpp  BaseValueObjectTest.h  ContactInfoTest.cpp  FlightNumberTest.cpp  PassportNumberTest.cpp  PriceTest.cpp  RouteTest.cpp  (+4 more)
source/src/tests/database/: MySQLXConnectionTest.cpp
source/src/tests/mock/: AircraftMockRepositoryTest.cpp  FlightMockRepositoryTest.cpp  PassengerMockRepositoryTest.cpp  TicketMockRepositoryTest.cpp
source/src/tests/services/: AircraftServiceTest.cpp  FlightServiceTest.cpp  PassengerServiceTest.cpp  TicketServiceTest.cpp
source/src/tests/services_mysql/: AircraftServiceTest.cpp  FlightServiceTest.cpp  PassengerServiceTest.cpp  TicketServiceTest.cpp
source/src/ui/: AircraftUI.cpp  AircraftUI.h  FlightUI.cpp  FlightUI.h  MainUI.cpp  MainUI.h  MainWindow.cpp  MainWindow.h  PassengerUI.cpp  PassengerUI.h  ReservationUI.cpp  ReservationUI.h  TicketUI.cpp  TicketUI.h
source/src/ui/dialogs/: AircraftDialog.cpp  AircraftDialog.h  SeatViewDialog.cpp  SeatViewDialog.h
source/src/ui/views/: AircraftView.cpp  AircraftView.h
source/src/utils/: Logger.cpp  Logger.h  TableConstants.h  utils.h
source/src/utils/Logs/: Logger.cpp  Logger.h
(+5 files in other folders)
